# ferrumc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.etc/: example-config.toml
.github/workflows/: rust.yml
assets/data/: packets.json  registry_packets.json
assets/data/configs/: main-config.toml
docs/: entities.md  metrics.md
scripts/: generate_packets.py
src/lib/adapters/nbt/: Cargo.toml
src/lib/adapters/nbt/tests/: array_deser.rs
src/lib/config/src/: server_config.rs
src/lib/core/: Cargo.toml
src/lib/core/src/: ai.rs  attributes.rs  brewing.rs  combat.rs  effects.rs  furnace.rs  health.rs  inventory.rs  lib.rs  movement.rs  scoreboard.rs  state.rs
src/lib/core/src/ai/: hostile.rs  neutral.rs  passive.rs
src/lib/core/src/chunks/: block_break_progress.rs  mod.rs
src/lib/core/src/collisions/: block.rs  bounds.rs  mod.rs  world.rs
src/lib/core/src/conn/: change_dimension_event.rs  chat_filter.rs  mod.rs  plugin_message.rs
src/lib/core/src/entities/: mod.rs  spawn_rules.rs
src/lib/core/src/identity/: entity_id.rs  mod.rs  player_identity.rs
src/lib/core/src/progression/: mod.rs  packets.rs  player.rs
src/lib/core/src/transform/: mod.rs  pending_teleport.rs
src/lib/core/state/src/: player_list.rs
src/lib/core/tests/: attributes.rs  entity_kind.rs  spawn_rules.rs
src/lib/derive_macros/src/static_loading/: packets.rs
src/lib/net/: Cargo.toml
src/lib/net/benches/: bench.rs  packets.rs  throughput.rs
src/lib/net/crates/encryption/: Cargo.toml
src/lib/net/src/: compression.rs  connection.rs  lib.rs  server.rs
src/lib/net/src/auth/: mod.rs  mojang.rs
src/lib/plugins/: Cargo.toml
src/lib/plugins/src/: errors.rs  lib.rs
src/lib/storage/: Cargo.toml
src/lib/storage/src/: lib.rs  player_data.rs  tests.rs
src/lib/text/src/: builders.rs  impl.rs  tests.rs  utils.rs
src/lib/utils/: Cargo.toml
src/lib/utils/src/: lib.rs  metrics.rs
src/lib/world/: Cargo.toml  blockmappings.b64  build.rs
src/lib/world/recipes/: recipes.json
src/lib/world/src/: biome_id.rs  block_id.rs  chunk_format.rs  db_functions.rs  edits.rs  errors.rs  lib.rs  recipes.rs  redstone.rs  tick.rs
src/lib/world/tests/: block_entity_persist.rs  block_mappings.rs  redstone.rs  tick.rs
src/lib/world_gen/: Cargo.toml
src/lib/world_gen/src/: end.rs  errors.rs  lib.rs  nether.rs  noise_settings.rs
src/lib/world_gen/tests/: generation.rs
src/tests/: Cargo.toml
src/tests/src/: lib.rs
src/tests/src/integration/: client_login.rs  combat.rs  mod.rs  world_edit.rs
src/tests/src/net/: chat.rs  chunk.rs  encrypted_login.rs  handshake_legacy_ping.rs  login_custom_query.rs  login_respawn.rs  login_utils.rs  mod.rs  offline_login.rs  player_actions.rs  recipe_packets.rs
(+75 files in other folders)
