[package]
name = "ferrumc-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrumc-nbt = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-net = { workspace = true }
ferrumc-config = { workspace = true }
bevy_ecs = { workspace = true}
ferrumc-core = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }
maplit = { workspace = true }
ferrumc-world = { workspace = true }
ferrumc-general-purpose = { workspace = true }
byteorder = { workspace = true }
ferrumc-net-encryption = { workspace = true }
wiremock = "0.6"
rsa = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }

[lints]
workspace = true
