[package]
name = "ferrumc-core"
description = "This crate defines all the primitives, traits and logics used in FerrumC codebase."
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
bevy_ecs = { workspace = true }
tracing = { workspace = true }
typename = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-text = { workspace = true }
uuid = { workspace = true }
ferrumc-world = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-state = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ferrumc-storage = { workspace = true }
ferrumc-config = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
