[package]
name = "ferrumc-storage"
description = "Implements storage capabilities of FerrumC for world persistence and on-disk resource parsing."
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
ferrumc-config = { workspace = true }
ferrumc-utils = { workspace = true }
rand = { workspace = true }
heed = { workspace = true }
page_size = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ferrumc-nbt = { workspace = true }
ferrumc-macros = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
wyhash = { workspace = true }
ferrumc-core = { workspace = true }
ferrumc-world = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
path = "src/benches/storage.rs"
